Get an immutable list.